--- a/chessboard/chess/chess/package.json
+++ b/chessboard/chess/chess/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "^10.0.8",
     "@angular/platform-browser-dynamic": "^10.0.8",
     "@angular/router": "^10.0.8",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.11",
     "rxjs": "~6.6.2",
     "zone.js": "~0.10.3"
   },
@@ -31,15 +31,15 @@
     "@angular/cli": "^10.0.5",
     "@angular/compiler-cli": "^10.0.8",
     "@angular/language-service": "^10.0.8",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^2.8.17",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^5.1.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^7.0.0",
